--- a/ShellCommand/MainWindow.xaml
+++ b/ShellCommand/MainWindow.xaml
@@ -41,6 +41,9 @@
 
         <Grid Grid.Row="1" Margin="20">
             <StackPanel>
+                <StackPanel Orientation="Horizontal" Visibility="{Binding DEBUG}">
+                    <Button Click="TestGlobalMenu">Test GlobalMenu</Button>
+                </StackPanel>
                 <wpf:Link Content="Open App Setting Folder" Click="OpenAppSettingFolder"></wpf:Link>
                 <wpf:Link Content="Edit Global Setting File" Click="EditGlobalSettingFile"></wpf:Link>
                 <Label></Label>
